@@ -13,6 +13,8 @@ Fixed:
 - Fixed invalid cannon propellant combinations due to spelling mistake in data pack folder name
 - Fixed cannon loader pushing without head
 - Fixed lag from cannon being tested during explosion, courtesy of Endalion
+- Fixed Disable All Failures config option not disabling squibbing
+- Fixed manual autocannons breaking on tick after squib
 
 ===
 
